--- a/SFML Project.vcxproj.filters
+++ b/SFML Project.vcxproj.filters
@@ -56,4 +56,8 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
