--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -154,6 +154,10 @@
   <ItemGroup>
     <Image Include="assets\player.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
