--- a/SFML Project.vcxproj.filters
+++ b/SFML Project.vcxproj.filters
@@ -326,6 +326,9 @@
     <ClInclude Include="include\scenenode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\ResourceTypes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\player.png">
