added command queue

--- a/SFML Project.vcxproj.filters
+++ b/SFML Project.vcxproj.filters
@@ -362,6 +362,9 @@
     <ClInclude Include="include\Category.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\CommandQueue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="deps\SFML\bin\libFLAC_dynamic.dll">
