--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\CommandQueue.h" />
     <ClInclude Include="include\Category.h" />
     <ClInclude Include="include\Command.h" />
     <ClInclude Include="deps\SFML\include\SFML\Audio.hpp" />
