--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SpriteNode.cpp" />
     <ClCompile Include="src\Aircraft.cpp" />
     <ClCompile Include="src\SceneNode.cpp" />
@@ -255,6 +256,7 @@
     <ClInclude Include="include\ResourceTypes.h" />
     <ClInclude Include="include\World.h" />
     <ClInclude Include="include\SpriteNode.h" />
+    <ClInclude Include="include\Player.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\player.png" />
