--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -149,6 +149,8 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="src\State.cpp" />
+    <ClCompile Include="src\StateMachine.cpp" />
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -254,6 +256,9 @@
     <ClInclude Include="include\ResourceManager.h" />
     <ClInclude Include="include\SceneNode.h" />
     <ClInclude Include="include\ResourceTypes.h" />
+    <ClInclude Include="include\State.h" />
+    <ClInclude Include="include\StateMachine.h" />
+    <ClInclude Include="include\StateTypes.h" />
     <ClInclude Include="include\World.h" />
     <ClInclude Include="include\SpriteNode.h" />
     <ClInclude Include="include\Player.h" />
