--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -142,6 +142,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\GameState.cpp" />
+    <ClCompile Include="src\TitleState.cpp" />
+    <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\SpriteNode.cpp" />
     <ClCompile Include="src\Cowboy.cpp" />
@@ -154,6 +157,7 @@
     <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\Application.h" />
     <ClInclude Include="include\CommandQueue.h" />
     <ClInclude Include="include\Category.h" />
     <ClInclude Include="include\Command.h" />
@@ -253,12 +257,14 @@
     <ClInclude Include="include\Cowboy.h" />
     <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Game.h" />
+    <ClInclude Include="include\GameState.h" />
     <ClInclude Include="include\ResourceManager.h" />
     <ClInclude Include="include\SceneNode.h" />
     <ClInclude Include="include\ResourceTypes.h" />
     <ClInclude Include="include\State.h" />
     <ClInclude Include="include\StateMachine.h" />
     <ClInclude Include="include\StateTypes.h" />
+    <ClInclude Include="include\TitleState.h" />
     <ClInclude Include="include\World.h" />
     <ClInclude Include="include\SpriteNode.h" />
     <ClInclude Include="include\Player.h" />
