--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -142,6 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\PauseState.cpp" />
     <ClCompile Include="src\Utils.cpp" />
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\TitleState.cpp" />
@@ -259,6 +260,7 @@
     <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameState.h" />
+    <ClInclude Include="include\PauseState.h" />
     <ClInclude Include="include\ResourceManager.h" />
     <ClInclude Include="include\SceneNode.h" />
     <ClInclude Include="include\ResourceTypes.h" />
