--- a/SFML Project.vcxproj.filters
+++ b/SFML Project.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="core\GUI\Label.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="core\GUI\Button.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\entity.h">
