added Animation class

--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="core\GUI\Component.cpp" />
     <ClCompile Include="core\GUI\Container.cpp" />
     <ClCompile Include="core\GUI\Label.cpp" />
+    <ClCompile Include="src\Animation.cpp" />
     <ClCompile Include="src\SettingsState.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
     <ClCompile Include="src\PauseState.cpp" />
@@ -169,6 +170,7 @@
     <ClInclude Include="core\GUI\Component.h" />
     <ClInclude Include="core\GUI\Container.h" />
     <ClInclude Include="core\GUI\Label.h" />
+    <ClInclude Include="include\Animation.h" />
     <ClInclude Include="include\Application.h" />
     <ClInclude Include="include\CommandQueue.h" />
     <ClInclude Include="include\Category.h" />
