--- a/SFML Project.vcxproj
+++ b/SFML Project.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="core\GUI\Component.cpp" />
     <ClCompile Include="core\GUI\Container.cpp" />
     <ClCompile Include="core\GUI\Label.cpp" />
+    <ClCompile Include="include\Data.cpp" />
     <ClCompile Include="src\Animation.cpp" />
     <ClCompile Include="src\SettingsState.cpp" />
     <ClCompile Include="src\MenuState.cpp" />
@@ -269,6 +270,7 @@
     <ClInclude Include="deps\SFML\include\SFML\Window\WindowHandle.hpp" />
     <ClInclude Include="deps\SFML\include\SFML\Window\WindowStyle.hpp" />
     <ClInclude Include="include\Cowboy.h" />
+    <ClInclude Include="include\Data.h" />
     <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\GameState.h" />
